# PackingLine

./: .pylintrc  README.md  audit.py  audit_report.txt  config.ini  dev-requirements.in  dev-requirements.txt  main.py  pyproject.toml  requirements.in  requirements.txt  version.txt
audit/: audit.py  audit_report_2025-09-05_14-03.txt  audit_report_2025-09-17_16-34.txt  audit_report_2025-09-18_13-09.txt  audit_report_2025-09-18_14-17.txt  audit_report_2025-09-18_15-01.txt  audit_report_2025-09-18_15-07.txt  audit_report_2025-09-18_16-05.txt  audit_report_2025-09-18_16-31.txt  audit_report_2025-09-18_20-27.txt  audit_report_2025-09-18_21-19.txt  vulture_whitelist.txt
controllers/: login_controller.py  print_config_controller.py  print_controller.py  print_loader_controller.py  print_logic_controller.py  work_order_controller.py
docs/: audit_report_2025-08-25_22-24.txt  home_terminal.md  pyproject.md  scheme.txt  work_terminal.md
installer/: version.txt
logs/: app.json  app.txt
models/: user_model.py
settings/: config.ini  create_config.py  create_config_home_verso_2.0.py  create_config_work_test_verso_2.0.py  create_test_config.py
src/: config.ini  main.py
src/logs/: app.json  app.txt
utils/: app_services.py  bartender_utils.py  config_checker.py  ensure_config_file.py  ensure_logs_dir.py  logger.py  messenger.py  order_data.py  path_validation.py  progress_box.py  resources.py  single_instance.py  system_info.py  validators.py  window_effects_manager.py  window_stack.py
views/: login_window.py  print_window.py  splash_screen.py  work_order_window.py
(+1 files in other folders)
